<resources>
    <string name="app_name">KTS - Viewer</string>

    <string name="menu_add_artist">Add new artist</string>
    <string name="menu_add_album">Add new Album</string>

    <string name="message_loading">Loading. Please wait…</string>
    <string name="header_album">Album</string>
    <string name="header_artist">Artist</string>

    <string name="button_edit">Edit</string>
    <string name="button_remove">Remove</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>

    <string name="switch_AddArtist">Add Artist</string>
    <string name="switch_EditArtist">Select Artist</string>

    <string name="dialog_delete_title">Delete Album?</string>
    <string name="dialog_delete_msg">
        Are you sure you want to delete this item?

        You will not be able to undo this action.
    </string>

    <string name="dialog_merge_title">Merge items?</string>
    <string name="dialog_merge_msg">
        The chosen new artist name is the same as an existing artist name.
        This will cause both items to be merged.

        Continue?
    </string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="error_error_title">Error</string>
    <string name="error_noProvider_mgs">
       Please install the companion database app before continuing.
    </string>
    <string name="error_emptyInput">Content must contain at least 1 non-space character</string>
</resources>