<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.lasley.kts_viewer.data.Album" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/header_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/div_album"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@color/material_dynamic_neutral50"
                app:layout_constraintBottom_toBottomOf="@id/header_album"
                app:layout_constraintStart_toEndOf="@id/header_album"
                app:layout_constraintTop_toTopOf="@id/header_album" />

            <TextView
                android:id="@+id/item_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{item.name}"
                app:layout_constraintStart_toEndOf="@id/div_album"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/header_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_artist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_album" />

            <View
                android:id="@+id/div_artist"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="@color/material_dynamic_neutral50"
                app:layout_constraintBottom_toBottomOf="@id/header_artist"
                app:layout_constraintStart_toEndOf="@id/header_artist"
                app:layout_constraintTop_toTopOf="@id/header_artist" />

            <TextView
                android:id="@+id/item_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{item.artistName}"
                app:layout_constraintStart_toEndOf="@id/div_artist"
                app:layout_constraintTop_toTopOf="@id/header_artist"
                tools:text="@tools:sample/full_names" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <include
                android:id="@+id/configContents"
                layout="@layout/config_data" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                app:layout_constraintBottom_toTopOf="@id/action_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/action_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/material_dynamic_neutral50"
            android:paddingTop="2dp" />
    </LinearLayout>
</layout>