<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_album_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/header_album"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_album"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/config_artist_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_album_layout">

        <LinearLayout
            android:id="@+id/select_artist_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/header_artist" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/select_artist"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_artist_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/header_artist"
            android:visibility="gone"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_artist"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/shape_border"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="4dp"
        app:layout_constraintTop_toTopOf="@id/config_artist_layout"
        app:layout_constraintStart_toEndOf="@id/config_artist_layout">

        <TextView
            android:id="@+id/switch_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/switch_AddArtist" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/add_artist_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
